--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "author": "Nic Reichert",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsc",
+    "start": "tsc -w"
+  },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "react": "^17.0.2",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "focus-trap": "^6.4.0"
   }
 }
